--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@bazel/bazel": "^1.2.0",
     "@bazel/ibazel": "^0.10.3",
     "@cypress/webpack-preprocessor": "^4.1.2",
+    "@getgauge/cli": "^1.1.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
